# dria-searching-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build_and_push.yml  staging.yml
src/dria_searching_agent/: main.py  server.py  tasks.py
src/dria_searching_agent/config/: agents.json  config.py  model.json
src/dria_searching_agent/db/: __init__.py  storage.py
src/dria_searching_agent/tools/: __init__.py  browser_tools.py  fin_tools.py  search_tools.py  vision_tools.py
tests/: config.json
